[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
infer = "0.19.0"
auto-palette = { version = "0.9.2", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "bmp"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
