[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
infer = "0.19.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "tiff", "bmp"] }
kmeans_colors = { version = "0.7", features = ["palette_color"] }
palette = "0.7"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
toml = "0.8"
dirs = "5.0"
